Add Helm chart, add selective namespace watching